implement expression parser; add AST printing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,9 +7,12 @@ add_executable(astral
     token.cpp
     parser.cpp
     ast.cpp
+    ast_printer.cpp
 
     lexer.hpp
     token.hpp
     parser.hpp
     ast.hpp
+    ast_visitor.hpp
+    ast_printer.hpp
 )
